--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run  --watch index.ts",
+    "dev": "wrangler dev index.ts",
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@cloudflare/workers-types": "^4.20250806.0",
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.31.4"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
     "elysia": "^1.3.8",
-    "notion-client": "^7.4.3"
+    "notion-client": "^7.4.3",
+    "wrangler": "^4.28.0"
   }
 }
