--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,14 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  }
+    "noPropertyAccessFromIndexSignature": false,
+    "types": [
+      "@cloudflare/workers-types"
+    ]
+  },
+  "include": [
+    "app/**/*.ts",
+    "index.ts",
+    "env.d.ts",
+  ],
 }
